--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -2,17 +2,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     android:padding="25dp">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/container"
         android:layout_width="336dp"
         android:layout_height="56dp"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/darkThemeSwitch"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.50"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/ic_back"
@@ -24,14 +26,13 @@
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/darkThemeSwitch"
         style="@style/SettingsItem"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="24dp"
         android:text="@string/dark_theme"
-        app:thumbTint="@color/switch_thumb_tint_selector"
-        app:trackTint="@color/switch_track_selector"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/container"
-         />
+        app:layout_constraintTop_toBottomOf="@+id/container"
+        app:thumbTint="@color/switch_thumb_tint_selector"
+        app:trackTint="@color/switch_track_selector" />
 
     <TextView
         android:id="@+id/share_app_TV"
@@ -50,21 +51,18 @@
         android:text="@string/contact_support"
         app:drawableEndCompat="@drawable/ic_write_to_support"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.52"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/container" />
 
     <TextView
         android:id="@+id/user_agreement_TV"
         style="@style/SettingsItem"
-        android:layout_marginTop="263dp"
         android:text="@string/user_agreement"
         app:drawableEndCompat="@drawable/ic_user_agreement"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.52"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/container"
-        app:layout_constraintVertical_bias="0.016" />
+        app:layout_constraintTop_toBottomOf="@+id/contact_support_TV"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
