--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,24 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.PlaylistMaket" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.PlaylistMaker" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="background">@color/YP_black</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="android:tint">@color/white</item>
+
     </style>
+
+    <style name="SettingsItem">
+        <item name="android:layout_width">336dp</item>
+        <item name="android:layout_height">64dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textFontWeight">500</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">44dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="background">@color/YP_black</item>
+        <item name="android:tint">@color/white</item>
+    </style>
+
 </resources>
