--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="YP_blue">#3772E7</color>
+    <color name="YP_black">#1A1B22</color>
+    <color name="YP_lightGray">#E6E8EB</color>
+    <color name="YP_Text_Gray"> #AEAFB4</color>
+    <color name="gray">#AEAFB4</color>
+    <color name="textColor">#000000</color>
 </resources>
